--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
 }
 
@@ -10,6 +10,14 @@ textarea {
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+}
+
+.display-3 {
+  text-align: center;
+}
+
+.lead {
+  text-align: center;
 }
 
 .description {
